# kitty-nft

refactor-02/kitty/: Cargo.toml  README.md
refactor-02/kitty/runtime/: Cargo.toml
refactor-02/kitty/runtime/src/: lib.rs
refactor-02/kitty/runtime/wasm/: Cargo.toml  build.sh
refactor-02/kitty/runtime/wasm/src/: lib.rs
refactor-02/kitty/src/: chain_spec.rs  main.rs  service.rs
substrate-node-template/pallets/kitties/: Cargo.toml
substrate-node-template/pallets/student/: Cargo.toml  README.md
substrate-node-template/pallets/student/src/: lib.rs
